--- a/src/components/gallery/myPortfolio.scss
+++ b/src/components/gallery/myPortfolio.scss
@@ -40,6 +40,65 @@
       width: 75%;
       margin: auto;
       .grid-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+        // background-color: #2196f3;
+        // padding: 10px;
+        margin-bottom: 100px;
+      }
+
+      .video-player {
+        // background-color: rgba(255, 255, 255, 0.8);
+        // padding: 5px;
+        // width: 30%;
+      }
+    }
+  }
+}
+
+// mobile view
+@media only screen and (max-width: 768px) {
+  #myPortfolio {
+    background-color: $page-background-color;
+    color: white;
+
+    #myPortfolio_text {
+      display: flex;
+      justify-content: space-between;
+      align-items: last baseline;
+      text-align: left;
+      width: 75%;
+      margin: auto;
+      z-index: 5000;
+      color: white;
+      // background-color: yellow;
+
+      > div h5 {
+        font-size: 1.5em;
+        padding: 0;
+        margin-top: 50px;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+        span {
+          color: gold;
+          margin-right: 10px;
+        }
+      }
+
+      h1 {
+        font-size: 3.5em;
+        color: gold;
+        padding: 0;
+        margin: 0;
+      }
+    }
+    #myPortfolio_content {
+      width: 75%;
+      margin: auto;
+      .grid-container {
         display: -webkit-box;
         display: -ms-flexbox;
         display: grid;
