--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -26,8 +26,8 @@
         display: flex;
         flex-direction: column;
         background-color: rgb(52, 72, 83);
-        max-height: 55vh;
-        width: 29%;
+        height: 65vh;
+        width: 40%;
         padding: 20px;
         > img {
           width: 100%;
