--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -56,10 +56,17 @@
   }
   
   .instagram-post {
-    border: 1px solid #ddd;
+    // border: 1px solid #ddd;
     padding: 10px;
     width: calc(33% - 40px);
-    box-sizing: border-box;
+
+    img {
+      // width: 400px;
+      // height: 400px;
+    // background-color: green;
+    // padding: 30px;
+    border-radius: 10px;
+    }
   }
   
   .instagram-post img, .instagram-post video {
