--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -11,11 +11,11 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
     padding: 30px;
-    // background-color: green;
+    background-color: green;
     .logo {
       font-size: 1.5rem;
       font-weight: bold;
-      color: #f00;
+      // color: #f00;
       img {
         // width: 80px;
         // height: 30px;
@@ -25,7 +25,8 @@
       }
     }
     nav {
-      margin: 30px 150px 0px 150px;
+      // background-color: red;
+      margin: 30px 0px 0px 0px;
       ul {
         display: flex;
         // justify-items: center;
@@ -54,13 +55,13 @@
 
 @media only screen and (max-width: 769px) {
   #nav_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 10px 20px;
+    // display: flex;
+    // justify-content: space-around;
+    // align-items: center;
+    // align-content: center;
+    // color: #fff;
+    // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    // padding: 10px 20px;
 
     .logo {
       color: #f00;
