--- a/src/components/rent/gearsForm.scss
+++ b/src/components/rent/gearsForm.scss
@@ -1,23 +1,37 @@
-// Form container
-.form {
+#crentingFormContainer {
+  background-color: #460505;
+  color: rgb(241, 238, 238);
+  #gearListContainer {
+    p {
+      color: rgb(235, 227, 227);
+    }
+    // ul li {
+    //   color: rgb(233, 220, 220);
+    // }
+  }
+  // Form container
+  .form {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
     background-color: #f4f4f4;
     border: 1px solid #ddd;
     border-radius: 5px;
+    label {
+      color: gold;
+    }
   }
-  
+
   // Label styles
   label {
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
   }
-  
+
   // Input and textarea styles
-  input[type='text'],
-  input[type='number'],
+  input[type="text"],
+  input[type="number"],
   textarea {
     width: 100%;
     padding: 8px;
@@ -27,7 +41,7 @@
     box-sizing: border-box;
     margin-bottom: 10px;
   }
-  
+
   // Select styles
   select {
     width: 100%;
@@ -38,12 +52,12 @@
     box-sizing: border-box;
     margin-bottom: 10px;
   }
-  
+
   // File input styles
-  input[type='file'] {
+  input[type="file"] {
     margin-top: 5px;
   }
-  
+
   // Button styles
   button {
     background-color: #007bff;
@@ -53,18 +67,18 @@
     cursor: pointer;
     border-radius: 3px;
   }
-  
+
   button:disabled {
     opacity: 0.6;
     cursor: not-allowed;
   }
-  
+
   // Error message styles
   .error-message {
     color: red;
     margin-top: 10px;
   }
-  
+
   // Modal styles
   .modal {
     background-color: rgba(0, 0, 0, 0.7);
@@ -77,14 +91,115 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-  
+
     h2 {
       color: #fff;
       margin-bottom: 10px;
     }
-  
+
     p {
       color: #fff;
     }
   }
-  
+  #equipment_card_container {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 75%;
+    color: white;
+
+    .equipment_card {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      border: solid 1px white;
+      padding: 20px;
+      transition: transform 0.5s ease-in-out;
+
+      &:hover {
+        transform: scale(1.04);
+      }
+
+      img {
+        max-width: 25%;
+        object-fit: cover;
+      }
+
+      .equipment_price_per_hour {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
+        width: 25%;
+        padding: 20px;
+        h3 {
+          margin-bottom: 30px;
+        }
+
+        h4 {
+          color: rgb(241, 168, 10);
+          font-size: 2em;
+          font-weight: 900;
+
+          .currency {
+            vertical-align: super;
+            font-size: 0.7em;
+            color: rgb(241, 168, 10);
+          }
+
+          span {
+            font-size: 0.52em;
+            color: rgb(255, 255, 255);
+            padding-left: 10px;
+          }
+        }
+      }
+
+      .equipment_description {
+        border-left: 1px solid #ffffff;
+        border-right: 1px solid white;
+        // padding: 20px;
+        list-style: none; /* Remove default bullets */
+        // background-color: yellow;
+        width: 25%;
+        padding: 50px;
+        font-size: 1.2em;
+      }
+
+      .equipment_description ul {
+        padding: 0; /* Remove default padding */
+        margin: 0; /* Remove default margin */
+        list-style: none; /* Remove default bullets */
+      }
+
+      .equipment_description li {
+        position: relative; /* Create a positioning context for the ::before pseudo-element */
+        padding-left: 25px; /* Space for the checkmark */
+      }
+
+      .equipment_description li::before {
+        content: "✔"; /* Unicode checkmark character */
+        position: absolute; /* Position it absolutely within the relative li */
+        left: 0; /* Position it to the left */
+        color: green; /* Change the color of the checkmark if desired */
+        font-size: 1.2em; /* Adjust size if needed */
+      }
+      .rent {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // background-color: green;
+        width: 20%;
+        button {
+          width: 50%;
+        }
+      }
+    }
+  }
+  #gearListContainer {
+    p {
+      color: black;
+    }
+  }
+}
