--- a/src/components/booking/pricing.scss
+++ b/src/components/booking/pricing.scss
@@ -125,6 +125,7 @@
       gap: 30px;
       width: 75%;
       color: white;
+      gap: 30px;
 
       .equipment_card {
         display: flex;
@@ -134,6 +135,7 @@
         border: solid 1px white;
         padding: 20px;
         transition: transform 0.5s ease-in-out;
+        margin-bottom: 30px;
 
         &:hover {
           transform: scale(1.04);
